Remove bootclass and not used jars